 - issue #184 : build against Android SDK 10.0 (API 29)
 - improved Spanish translation, thanks to badlop
 - issue #186 : add screenshots to fastlane
 - upgrade build toolchain to gradle 6.8, gradle for Android plugin 4.1.1
 - issue #126, #172: convert unittests to junit5 (Jupiter)
 - improved Hindi translation, thanks to Dormin
 - export coverity-scan certificate before Travis-ci build

 v0.7 (released on 02Jan2021)
 - issue #73 : add form to manually enter a location, thanks to Timotheos Constambeys
 - translated to Ukrainian, thanks to Oleksiy
 - translated to Turkish, thanks to Mesut Akcan
 - increase required translated strings for a language to 85%
 - translated to Hungarian, thanks to Balázs Úr
 - translated to Persian, thanks to AbbasBHF
 - translated to Portuguese, thanks to Silvério Santos
 - translated to Hebrew, thanks to Yaron Shahrabani
 - translated to Kabyle, thanks to MozillaKab

 v0.6 (released on 03Mar2019)
 - build against Android SDK 8.0 (API 26)
 - improved German translation, thanks to Silvério Santos
 - issue #176 : build with Gradle 4.6 and Gradle android plugin 3.2.1
 - issue #175 : build against Android SDK 9.0 (API 28)
 - issue #177 : increase minimum supported Android SDK 4.0 (API 14)
 - issue #167 : check application location access permissions
 - issue #178 : stop using Maven build
 - remove buildtime trend implementation
 - use isOrientationLandscape() to set shorter strings
 - improved Danish translation, thanks to Jan Madsen
 - improved Japanese translation, thanks to Naofum
 - improved Belarusian translation, thanks to Viktar Vaŭčkievič
 - improved Estonian translation, thanks to Kristjan Räts
 - improved Dutch translation
 - improved French translation, thanks to Nam
 - improved Norwegian Bokmål translation, thanks to Allan Nordhøy
 - improved Sardinian translation, thanks to asezere
 - improved Chinese (Traditional) translation, thanks to ezjerry liao
 - improved Arabic translation, thanks to TWINS DZ
